Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.4.2, 6.5.0 Beta2
-
48d2066d6 (dev)
Description
See the attached minimal project that uses WebEngineView.
New compile time warnings
Related to QTBUG-95667 and QTBUG-110794 ?
Warning: main.qml:2:1: Warnings occurred while importing module "QtWebEngine": import QtWebEngine ^^^^^^ --- Warning: C:\Qt\6.4.2\msvc2019_64\qml\QtWebChannel\plugins.qmltypes:15:37: Meta object revision and export version differ. Revision 0 corresponds to version 0.0; it should be 1.0. ---
New runtime warnings
QWebEngineCertificateError is neither a QObject, nor default- and copy-constructible. You should not use it as a QML type. QWebEngineFullScreenRequest is neither a QObject, nor default- and copy-constructible. You should not use it as a QML type. QWebEngineLoadingInfo is neither a QObject, nor default- and copy-constructible. You should not use it as a QML type.
Attachments
Issue Links
- depends on
-
QTBUG-108649 make value types uncreatable with QML_UNCREATABLE
-
- Closed
-
- duplicates
-
QTBUG-108612 Startup warnings "... You should not use it as a QML type"
-
- Closed
-
For Gerrit Dashboard: QTBUG-110795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
457837,10 | Fix project structure and auto registry | dev | qt/qtwebchannel | Status: MERGED | +2 | 0 |
458351,1 | Fix project structure and auto registry | 6.5 | qt/qtwebchannel | Status: ABANDONED | +2 | 0 |
477296,4 | Move Qt::Qml dependency to WebChannelPrivate | dev | qt/qtwebchannel | Status: ABANDONED | -1 | 0 |