Fix project structure and auto registry

Create QtWebChannelQuick and move the required sources,
so auto registry works and qml types files and friends
are auto generated. This makes things inline what other
modules do.

This change has a side effect as qqmlwebchannel.h
will change its module, however this is semi-pulibc
header, hopefully only used by QtWebEngine.

[ChangeLog] Created new QtWebChannelQuick which holds
qml sources.

Task-number: QTBUG-110795
Fixes: QTBUG-99959
Change-Id: Ic8aa72f070d6a9e23d918a1210f4df62df739397
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>