src/webchannelquick/qqmlwebchannel.h
@@ -1,11 +1,12 @@
-// Copyright (C) 2016 Klarälvdalens Datakonsult AB, a KDAB Group company, info@kdab.com, author Milian Wolff <milian.wolff@kdab.com>
+// Copyright (C) 2016 Klarälvdalens Datakonsult AB, a KDAB Group company, info@kdab.com, author
+// Milian Wolff <milian.wolff@kdab.com>
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR LGPL-3.0-only OR GPL-2.0-only OR GPL-3.0-only
 
 #ifndef QQMLWEBCHANNEL_H
 #define QQMLWEBCHANNEL_H
 
-#include <QtWebChannel/QWebChannel>
-#include <QtWebChannel/qwebchannelglobal.h>
+#include <QtWebChannelQuick/qwebchannelquickglobal.h>
+#include <QtWebChannel/qwebchannel.h>
 
 #include <QtQml/qqml.h>
 #include <QtQml/QQmlListProperty>
@@ -14,14 +15,16 @@ QT_BEGIN_NAMESPACE
 
 class QQmlWebChannelPrivate;
 class QQmlWebChannelAttached;
-class Q_WEBCHANNEL_EXPORT QQmlWebChannel : public QWebChannel
+class Q_WEBCHANNELQUICK_EXPORT QQmlWebChannel : public QWebChannel
 {
     Q_OBJECT
     Q_DISABLE_COPY(QQmlWebChannel)
 
-    Q_PROPERTY( QQmlListProperty<QObject> transports READ transports )
-    Q_PROPERTY( QQmlListProperty<QObject> registeredObjects READ registeredObjects )
-
+    Q_PROPERTY(QQmlListProperty<QObject> transports READ transports)
+    Q_PROPERTY(QQmlListProperty<QObject> registeredObjects READ registeredObjects)
+    QML_NAMED_ELEMENT(WebChannel)
+    QML_ATTACHED(QQmlWebChannelAttached)
+    QML_ADDED_IN_VERSION(1, 0)
 public:
     explicit QQmlWebChannel(QObject *parent = nullptr);
     virtual ~QQmlWebChannel();
@@ -53,7 +56,7 @@ private:
 
 QT_END_NAMESPACE
 
-QML_DECLARE_TYPE( QQmlWebChannel )
-QML_DECLARE_TYPEINFO( QQmlWebChannel, QML_HAS_ATTACHED_PROPERTIES )
+QML_DECLARE_TYPE(QQmlWebChannel)
+QML_DECLARE_TYPEINFO(QQmlWebChannel, QML_HAS_ATTACHED_PROPERTIES)
 
 #endif // QQMLWEBCHANNEL_H
